deploy: 269a77018b8c611d3573d7c6dfbb7510b3bb9b90

--- a/nodesnim/core/animation.html
+++ b/nodesnim/core/animation.html
@@ -195,7 +195,7 @@ Adds a new frame in the animation.
 
 </dd>
 <a id="==,AnimationRef[T],AnimationRef[T]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#%3D%3D%2CAnimationRef%5BT%5D%2CAnimationRef%5BT%5D"><span class="Identifier">`==`</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#%3D%3D%2CAnimationRef%5BT%5D%2CAnimationRef%5BT%5D"><span class="Identifier">`==`</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -232,7 +232,7 @@ Adds a new frame in the animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:09 UTC</small>
       </div>
     </div>
   </div>
