--- a/nodesnim/core/image.html
+++ b/nodesnim/core/image.html
@@ -109,7 +109,7 @@ function main() {
       <li><a class="reference" href="#GlTextureObj"
     title="GlTextureObj = object of RootObj
   texture*: GLuint
-  size*: Vector2Ref"><wbr />Gl<wbr />Texture<wbr />Obj<span class="attachedType"></span></a></li>
+  size*: Vector2Obj"><wbr />Gl<wbr />Texture<wbr />Obj<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -142,7 +142,7 @@ function main() {
 <a id="GlTextureObj"></a>
 <dt><pre><a href="image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">texture</span><span class="Operator">*</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLuint"><span class="Identifier">GLuint</span></a>
-  <span class="Identifier">size</span><span class="Operator">*</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
+  <span class="Identifier">size</span><span class="Operator">*</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a>
 </pre></dt>
 <dd>
 
@@ -188,7 +188,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:01 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:09 UTC</small>
       </div>
     </div>
   </div>
