--- a/nodesnim/nodes2d/kinematic_body2d.html
+++ b/nodesnim/nodes2d/kinematic_body2d.html
@@ -136,8 +136,8 @@ function main() {
     title="duplicate(self: KinematicBody2DRef): KinematicBody2DRef"><wbr />duplicate<span class="attachedType">KinematicBody2DRef</span></a></li>
   <li><a class="reference" href="#isCollide.e%2CKinematicBody2DRef"
     title="isCollide(self: KinematicBody2DRef): bool"><wbr />is<wbr />Collide<span class="attachedType">KinematicBody2DRef</span></a></li>
-  <li><a class="reference" href="#moveAndCollide.e%2CKinematicBody2DRef%2CVector2Ref"
-    title="moveAndCollide(self: KinematicBody2DRef; vel: Vector2Ref)"><wbr />move<wbr />And<wbr />Collide<span class="attachedType">KinematicBody2DRef</span></a></li>
+  <li><a class="reference" href="#moveAndCollide.e%2CKinematicBody2DRef%2CVector2Obj"
+    title="moveAndCollide(self: KinematicBody2DRef; vel: Vector2Obj)"><wbr />move<wbr />And<wbr />Collide<span class="attachedType">KinematicBody2DRef</span></a></li>
 
   </ul>
 </li>
@@ -237,8 +237,8 @@ Duplicates KinematicBody2D and create a new KinematicBody2D pointer.
 Checks any collision and return <tt class="docutils literal"><span class="pre">true</span></tt>, when collide with any collision shape.
 
 </dd>
-<a id="moveAndCollide.e,KinematicBody2DRef,Vector2Ref"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#moveAndCollide.e%2CKinematicBody2DRef%2CVector2Ref"><span class="Identifier">moveAndCollide</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DRef"><span class="Identifier">KinematicBody2DRef</span></a><span class="Other">;</span> <span class="Identifier">vel</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+<a id="moveAndCollide.e,KinematicBody2DRef,Vector2Obj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#moveAndCollide.e%2CKinematicBody2DRef%2CVector2Obj"><span class="Identifier">moveAndCollide</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DRef"><span class="Identifier">KinematicBody2DRef</span></a><span class="Other">;</span> <span class="Identifier">vel</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -259,7 +259,7 @@ Checks any collision and return <tt class="docutils literal"><span class="pre">t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:51 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:55 UTC</small>
       </div>
     </div>
   </div>
