--- a/nodesnim/nodes2d/sprite.html
+++ b/nodesnim/nodes2d/sprite.html
@@ -131,7 +131,7 @@ function main() {
   <li><a class="reference" href="#duplicate.e%2CSpriteRef"
     title="duplicate(self: SpriteRef): SpriteRef"><wbr />duplicate<span class="attachedType">SpriteRef</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CSpriteRef"
-    title="getGlobalMousePosition(self: SpriteRef): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">SpriteRef</span></a></li>
+    title="getGlobalMousePosition(self: SpriteRef): Vector2Obj"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">SpriteRef</span></a></li>
   <li><a class="reference" href="#loadTexture.e%2CSpriteRef%2Ccstring"
     title="loadTexture(self: SpriteRef; file: cstring; mode = GL_RGB)"><wbr />load<wbr />Texture<span class="attachedType">SpriteRef</span></a></li>
   <li><a class="reference" href="#setTexture.e%2CSpriteRef%2CGlTextureObj"
@@ -210,7 +210,7 @@ Duplicates Sprite object and create a new Sprite.
 
 </dd>
 <a id="getGlobalMousePosition.e,SpriteRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getGlobalMousePosition.e%2CSpriteRef"><span class="Identifier">getGlobalMousePosition</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpriteRef"><span class="Identifier">SpriteRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">method</span> <a href="#getGlobalMousePosition.e%2CSpriteRef"><span class="Identifier">getGlobalMousePosition</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpriteRef"><span class="Identifier">SpriteRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -251,7 +251,7 @@ Returns mouse position.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:45 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:49 UTC</small>
       </div>
     </div>
   </div>
