--- a/nodesnim/nodescontrol/subwindow.html
+++ b/nodesnim/nodescontrol/subwindow.html
@@ -112,7 +112,7 @@ function main() {
   title_taked*: bool
   icon*: GlTextureObj
   title_bar*: DrawableRef
-  title_taked_pos*: Vector2Ref
+  title_taked_pos*: Vector2Obj
   title*: LabelRef"><wbr />Sub<wbr />Window<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#SubWindowRef"
     title="SubWindowRef = ref SubWindowObj"><wbr />Sub<wbr />Window<wbr />Ref<span class="attachedType"></span></a></li>
@@ -179,7 +179,7 @@ function main() {
   <span class="Identifier">title_taked</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">icon</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a>
   <span class="Identifier">title_bar</span><span class="Operator">*</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a>
-  <span class="Identifier">title_taked_pos</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
+  <span class="Identifier">title_taked_pos</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a>
   <span class="Identifier">title</span><span class="Operator">*</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a>
 </pre></dt>
 <dd>
@@ -339,7 +339,7 @@ Opens the window. alias of show() method.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:42 UTC</small>
       </div>
     </div>
   </div>
