--- a/nodesnim/core/anchor.html
+++ b/nodesnim/core/anchor.html
@@ -109,8 +109,6 @@ function main() {
       <li><a class="reference" href="#AnchorObj"
     title="AnchorObj = object
   x1*, y1*, x2*, y2*: float"><wbr />Anchor<wbr />Obj<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#AnchorRef"
-    title="AnchorRef = ref AnchorObj"><wbr />Anchor<wbr />Ref<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -118,15 +116,15 @@ function main() {
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Anchor%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
-    title="Anchor(x1, y1, x2, y2: float): AnchorRef"><wbr />Anchor<span class="attachedType">AnchorRef</span></a></li>
-  <li><a class="reference" href="#Anchor%2CVector2Ref%2CVector2Ref"
-    title="Anchor(vec1, vec2: Vector2Ref): AnchorRef"><wbr />Anchor<span class="attachedType">AnchorRef</span></a></li>
-  <li><a class="reference" href="#clear%2CAnchorRef"
-    title="clear(a: AnchorRef)"><wbr />clear<span class="attachedType">AnchorRef</span></a></li>
-  <li><a class="reference" href="#isEmpty%2CAnchorRef"
-    title="isEmpty(a: AnchorRef): bool"><wbr />is<wbr />Empty<span class="attachedType">AnchorRef</span></a></li>
-  <li><a class="reference" href="#%24%2CAnchorRef"
-    title="`$`(x: AnchorRef): string"><wbr />`$`<span class="attachedType">AnchorRef</span></a></li>
+    title="Anchor(x1, y1, x2, y2: float): AnchorObj"><wbr />Anchor<span class="attachedType">AnchorObj</span></a></li>
+  <li><a class="reference" href="#Anchor%2CVector2Obj%2CVector2Obj"
+    title="Anchor(vec1, vec2: Vector2Obj): AnchorObj"><wbr />Anchor<span class="attachedType">AnchorObj</span></a></li>
+  <li><a class="reference" href="#clear%2CAnchorObj"
+    title="clear(a: var AnchorObj)"><wbr />clear<span class="attachedType">AnchorObj</span></a></li>
+  <li><a class="reference" href="#isEmpty%2CAnchorObj"
+    title="isEmpty(a: AnchorObj): bool"><wbr />is<wbr />Empty<span class="attachedType">AnchorObj</span></a></li>
+  <li><a class="reference" href="#%24%2CAnchorObj"
+    title="`$`(x: AnchorObj): string"><wbr />`$`<span class="attachedType">AnchorObj</span></a></li>
 
   </ul>
 </li>
@@ -155,48 +153,41 @@ function main() {
 
 
 </dd>
-<a id="AnchorRef"></a>
-<dt><pre><a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a></pre></dt>
-<dd>
-
-
-
-</dd>
 
 </dl></div>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="Anchor,float,float,float,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Anchor%2Cfloat%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">Anchor</span></a><span class="Other">(</span><span class="Identifier">x1</span><span class="Other">,</span> <span class="Identifier">y1</span><span class="Other">,</span> <span class="Identifier">x2</span><span class="Other">,</span> <span class="Identifier">y2</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#Anchor%2Cfloat%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">Anchor</span></a><span class="Other">(</span><span class="Identifier">x1</span><span class="Other">,</span> <span class="Identifier">y1</span><span class="Other">,</span> <span class="Identifier">x2</span><span class="Other">,</span> <span class="Identifier">y2</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="Anchor,Vector2Ref,Vector2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Anchor%2CVector2Ref%2CVector2Ref"><span class="Identifier">Anchor</span></a><span class="Other">(</span><span class="Identifier">vec1</span><span class="Other">,</span> <span class="Identifier">vec2</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Anchor,Vector2Obj,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Anchor%2CVector2Obj%2CVector2Obj"><span class="Identifier">Anchor</span></a><span class="Other">(</span><span class="Identifier">vec1</span><span class="Other">,</span> <span class="Identifier">vec2</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="clear,AnchorRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#clear%2CAnchorRef"><span class="Identifier">clear</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="clear,AnchorObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#clear%2CAnchorObj"><span class="Identifier">clear</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="isEmpty,AnchorRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#isEmpty%2CAnchorRef"><span class="Identifier">isEmpty</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="isEmpty,AnchorObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#isEmpty%2CAnchorObj"><span class="Identifier">isEmpty</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if a is Anchor(0, 0, 0, 0)
 
 </dd>
-<a id="$,AnchorRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#%24%2CAnchorRef"><span class="Identifier">`$`</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="$,AnchorObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#%24%2CAnchorObj"><span class="Identifier">`$`</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -212,7 +203,7 @@ Returns true, if a is Anchor(0, 0, 0, 0)
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:26:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:05 UTC</small>
       </div>
     </div>
   </div>
