--- a/nodesnim/core/rect2.html
+++ b/nodesnim/core/rect2.html
@@ -119,18 +119,18 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Rect2%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
     title="Rect2(x, y, w, h: float): Rect2Ref"><wbr />Rect2<span class="attachedType">Rect2Ref</span></a></li>
-  <li><a class="reference" href="#Rect2%2CVector2Ref%2CVector2Ref"
-    title="Rect2(left_top, width_height: Vector2Ref): Rect2Ref"><wbr />Rect2<span class="attachedType">Rect2Ref</span></a></li>
+  <li><a class="reference" href="#Rect2%2CVector2Obj%2CVector2Obj"
+    title="Rect2(pos, size: Vector2Obj): Rect2Ref"><wbr />Rect2<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#contains%2CRect2Ref%2Cfloat%2Cfloat"
     title="contains(self: Rect2Ref; x, y: float): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
-  <li><a class="reference" href="#contains%2CRect2Ref%2CVector2Ref"
-    title="contains(self: Rect2Ref; vector: Vector2Ref): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
+  <li><a class="reference" href="#contains%2CRect2Ref%2CVector2Obj"
+    title="contains(self: Rect2Ref; vector: Vector2Obj): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#contains%2CRect2Ref%2CRect2Ref"
     title="contains(self, other: Rect2Ref): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CRect2Ref%2CRect2Ref"
     title="intersects(self, other: Rect2Ref): bool"><wbr />intersects<span class="attachedType">Rect2Ref</span></a></li>
-  <li><a class="reference" href="#contains%2CRect2Ref%2CVector2Ref%2CVector2Ref"
-    title="contains(self: Rect2Ref; a, b: Vector2Ref): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
+  <li><a class="reference" href="#contains%2CRect2Ref%2CVector2Obj%2CVector2Obj"
+    title="contains(self: Rect2Ref; a, b: Vector2Obj): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#clamp%2Cfloat%2Cfloat%2Cfloat"
     title="clamp(a, b, c: float): float"><wbr />clamp<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#isCollideWithCircle%2CRect2Ref%2Cfloat%2Cfloat%2Cfloat"
@@ -184,8 +184,8 @@ function main() {
 
 
 </dd>
-<a id="Rect2,Vector2Ref,Vector2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Rect2%2CVector2Ref%2CVector2Ref"><span class="Identifier">Rect2</span></a><span class="Other">(</span><span class="Identifier">left_top</span><span class="Other">,</span> <span class="Identifier">width_height</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Rect2,Vector2Obj,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Rect2%2CVector2Obj%2CVector2Obj"><span class="Identifier">Rect2</span></a><span class="Other">(</span><span class="Identifier">pos</span><span class="Other">,</span> <span class="Identifier">size</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -198,8 +198,8 @@ function main() {
 
 
 </dd>
-<a id="contains,Rect2Ref,Vector2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2CVector2Ref"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">vector</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,Rect2Ref,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">vector</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -219,8 +219,8 @@ function main() {
 
 
 </dd>
-<a id="contains,Rect2Ref,Vector2Ref,Vector2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2CVector2Ref%2CVector2Ref"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,Rect2Ref,Vector2Obj,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2CVector2Obj%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -257,7 +257,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:26:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:05 UTC</small>
       </div>
     </div>
   </div>
