--- a/nodesnim/nodes2d/animated_sprite.html
+++ b/nodesnim/nodes2d/animated_sprite.html
@@ -133,7 +133,7 @@ function main() {
   <li><a class="reference" href="#duplicate.e%2CAnimatedSpriteRef"
     title="duplicate(self: AnimatedSpriteRef): AnimatedSpriteRef"><wbr />duplicate<span class="attachedType">AnimatedSpriteRef</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CAnimatedSpriteRef"
-    title="getGlobalMousePosition(self: AnimatedSpriteRef): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">AnimatedSpriteRef</span></a></li>
+    title="getGlobalMousePosition(self: AnimatedSpriteRef): Vector2Obj"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">AnimatedSpriteRef</span></a></li>
   <li><a class="reference" href="#addAnimation.e%2CAnimatedSpriteRef%2Cstring%2Cfloat"
     title="addAnimation(self: AnimatedSpriteRef; name: string; speed: float = 2.0&apos;f32)"><wbr />add<wbr />Animation<span class="attachedType">AnimatedSpriteRef</span></a></li>
   <li><a class="reference" href="#addFrame.e%2CAnimatedSpriteRef%2Cstring%2CGlTextureObj"
@@ -226,7 +226,7 @@ Duplicates AnimatedSprite object and create a new AnimatedSprite.
 
 </dd>
 <a id="getGlobalMousePosition.e,AnimatedSpriteRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getGlobalMousePosition.e%2CAnimatedSpriteRef"><span class="Identifier">getGlobalMousePosition</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpriteRef"><span class="Identifier">AnimatedSpriteRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">method</span> <a href="#getGlobalMousePosition.e%2CAnimatedSpriteRef"><span class="Identifier">getGlobalMousePosition</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="animated_sprite.html#AnimatedSpriteRef"><span class="Identifier">AnimatedSpriteRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -320,7 +320,7 @@ Resumes animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:51 UTC</small>
       </div>
     </div>
   </div>
