--- a/nodesnim/nodescontrol/box.html
+++ b/nodesnim/nodescontrol/box.html
@@ -108,7 +108,7 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#BoxObj"
     title="BoxObj = object of ControlRef
-  child_anchor*: AnchorRef"><wbr />Box<wbr />Obj<span class="attachedType"></span></a></li>
+  child_anchor*: AnchorObj"><wbr />Box<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#BoxRef"
     title="BoxRef = ref BoxObj"><wbr />Box<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -126,7 +126,7 @@ function main() {
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getChildSize.e%2CBoxRef"
-    title="getChildSize(self: BoxRef): Vector2Ref"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">BoxRef</span></a></li>
+    title="getChildSize(self: BoxRef): Vector2Obj"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#addChild.e%2CBoxRef%2CNodeRef"
     title="addChild(self: BoxRef; child: NodeRef)"><wbr />add<wbr />Child<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#draw.e%2CBoxRef%2CGLfloat%2CGLfloat"
@@ -135,8 +135,8 @@ function main() {
     title="duplicate(self: BoxRef): BoxRef"><wbr />duplicate<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#resize.e%2CBoxRef%2CGLfloat%2CGLfloat%2Cbool"
     title="resize(self: BoxRef; w, h: GLfloat; save_anchor: bool = false)"><wbr />resize<span class="attachedType">BoxRef</span></a></li>
-  <li><a class="reference" href="#setChildAnchor.e%2CBoxRef%2CAnchorRef"
-    title="setChildAnchor(self: BoxRef; anchor: AnchorRef)"><wbr />set<wbr />Child<wbr />Anchor<span class="attachedType">BoxRef</span></a></li>
+  <li><a class="reference" href="#setChildAnchor.e%2CBoxRef%2CAnchorObj"
+    title="setChildAnchor(self: BoxRef; anchor: AnchorObj)"><wbr />set<wbr />Child<wbr />Anchor<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#setChildAnchor.e%2CBoxRef%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
     title="setChildAnchor(self: BoxRef; x1, y1, x2, y2: float)"><wbr />set<wbr />Child<wbr />Anchor<span class="attachedType">BoxRef</span></a></li>
 
@@ -160,7 +160,7 @@ function main() {
 <dl class="item">
 <a id="BoxObj"></a>
 <dt><pre><a href="box.html#BoxObj"><span class="Identifier">BoxObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a>
-  <span class="Identifier">child_anchor</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>
+  <span class="Identifier">child_anchor</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a>
 </pre></dt>
 <dd>
 
@@ -198,7 +198,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="getChildSize.e,BoxRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns Vector2 of the minimal size of the box pointer.
@@ -242,8 +242,8 @@ Duplicates Box.
 
 
 </dd>
-<a id="setChildAnchor.e,BoxRef,AnchorRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setChildAnchor.e%2CBoxRef%2CAnchorRef"><span class="Identifier">setChildAnchor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">;</span> <span class="Identifier">anchor</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="setChildAnchor.e,BoxRef,AnchorObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setChildAnchor.e%2CBoxRef%2CAnchorObj"><span class="Identifier">setChildAnchor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">;</span> <span class="Identifier">anchor</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Changes child anchor.</p>
@@ -275,7 +275,7 @@ Duplicates Box.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:17 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:22 UTC</small>
       </div>
     </div>
   </div>
