--- a/nodesnim/nodescontrol/grid_box.html
+++ b/nodesnim/nodescontrol/grid_box.html
@@ -127,9 +127,9 @@ function main() {
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getMaxChildSize.e%2CGridBoxRef"
-    title="getMaxChildSize(self: GridBoxRef): Vector2Ref"><wbr />get<wbr />Max<wbr />Child<wbr />Size<span class="attachedType">GridBoxRef</span></a></li>
+    title="getMaxChildSize(self: GridBoxRef): Vector2Obj"><wbr />get<wbr />Max<wbr />Child<wbr />Size<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#getChildSize.e%2CGridBoxRef"
-    title="getChildSize(self: GridBoxRef): Vector2Ref"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">GridBoxRef</span></a></li>
+    title="getChildSize(self: GridBoxRef): Vector2Obj"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#addChild.e%2CGridBoxRef%2CNodeRef"
     title="addChild(self: GridBoxRef; child: NodeRef)"><wbr />add<wbr />Child<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#draw.e%2CGridBoxRef%2CGLfloat%2CGLfloat"
@@ -202,14 +202,14 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="getMaxChildSize.e,GridBoxRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getMaxChildSize.e%2CGridBoxRef"><span class="Identifier">getMaxChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#getMaxChildSize.e%2CGridBoxRef"><span class="Identifier">getMaxChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
 <a id="getChildSize.e,GridBoxRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CGridBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CGridBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns size with all childs.
@@ -278,7 +278,7 @@ Changes separator between child nodes.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:27 UTC</small>
       </div>
     </div>
   </div>
