--- a/nodesnim/nodescontrol/hbox.html
+++ b/nodesnim/nodescontrol/hbox.html
@@ -126,7 +126,7 @@ function main() {
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getChildSize.e%2CHBoxRef"
-    title="getChildSize(self: HBoxRef): Vector2Ref"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">HBoxRef</span></a></li>
+    title="getChildSize(self: HBoxRef): Vector2Obj"><wbr />get<wbr />Child<wbr />Size<span class="attachedType">HBoxRef</span></a></li>
   <li><a class="reference" href="#addChild.e%2CHBoxRef%2CNodeRef"
     title="addChild(self: HBoxRef; child: NodeRef)"><wbr />add<wbr />Child<span class="attachedType">HBoxRef</span></a></li>
   <li><a class="reference" href="#draw.e%2CHBoxRef%2CGLfloat%2CGLfloat"
@@ -194,7 +194,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="getChildSize.e,HBoxRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CHBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="hbox.html#HBoxRef"><span class="Identifier">HBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#getChildSize.e%2CHBoxRef"><span class="Identifier">getChildSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="hbox.html#HBoxRef"><span class="Identifier">HBoxRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -249,7 +249,7 @@ Duplicates HBox object and create a new HBox.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:18 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:24 UTC</small>
       </div>
     </div>
   </div>
