--- a/nodesnim/nodescontrol/lineedit.html
+++ b/nodesnim/nodescontrol/lineedit.html
@@ -120,7 +120,7 @@ function main() {
   color*: ColorRef             ## Text color.
   hint_color*: ColorRef        ## Hint color.
   caret_color*: ColorRef
-  text_align*: AnchorRef       ## Text align.
+  text_align*: AnchorObj       ## Text align.
   on_edit*: proc (pressed_key: string): void ## This called when user press any key."><wbr />Line<wbr />Edit<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#LineEditRef"
     title="LineEditRef = ref LineEditObj"><wbr />Line<wbr />Edit<wbr />Ref<span class="attachedType"></span></a></li>
@@ -139,7 +139,7 @@ function main() {
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getTextSize.e%2CLineEditRef"
-    title="getTextSize(self: LineEditRef): Vector2Ref"><wbr />get<wbr />Text<wbr />Size<span class="attachedType">LineEditRef</span></a></li>
+    title="getTextSize(self: LineEditRef): Vector2Obj"><wbr />get<wbr />Text<wbr />Size<span class="attachedType">LineEditRef</span></a></li>
   <li><a class="reference" href="#getCharPositionUnderMouse.e%2CLineEditRef"
     title="getCharPositionUnderMouse(self: LineEditRef): int"><wbr />get<wbr />Char<wbr />Position<wbr />Under<wbr />Mouse<span class="attachedType">LineEditRef</span></a></li>
   <li><a class="reference" href="#draw.e%2CLineEditRef%2CGLfloat%2CGLfloat"
@@ -183,7 +183,7 @@ function main() {
   <span class="Identifier">color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>             <span class="Comment">## Text color.</span>
   <span class="Identifier">hint_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>        <span class="Comment">## Hint color.</span>
   <span class="Identifier">caret_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
-  <span class="Identifier">text_align</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>       <span class="Comment">## Text align.</span>
+  <span class="Identifier">text_align</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a>       <span class="Comment">## Text align.</span>
   <span class="Identifier">on_edit</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">pressed_key</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when user press any key.</span>
   </pre></dt>
 <dd>
@@ -222,7 +222,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="getTextSize.e,LineEditRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#getTextSize.e%2CLineEditRef"><span class="Identifier">getTextSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="lineedit.html#LineEditRef"><span class="Identifier">LineEditRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#getTextSize.e%2CLineEditRef"><span class="Identifier">getTextSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="lineedit.html#LineEditRef"><span class="Identifier">LineEditRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns text size.
@@ -275,7 +275,7 @@ Changes LineEdit text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:43 UTC</small>
       </div>
     </div>
   </div>
